mpegts_probe: detect files with garbage at the begin.

Fixes Ticket1811

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>